--- a/template/adm/assets/css/style.css
+++ b/template/adm/assets/css/style.css
@@ -1316,7 +1316,7 @@ a.list-group-item-danger.active, button.list-group-item-danger.active, a.list-gr
 .list-group-item-text { margin-bottom: 0; line-height: 1.3; }
 .panel { margin-bottom: 17px; background-color: #ffffff; border: 1px solid transparent; border-radius: 2px; -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
 .panel-body { padding: 20px; }
-.panel-heading { padding: 15px; border-bottom: 1px solid transparent; border-top-right-radius: 1px; border-top-left-radius: 1px; }
+.panel-heading { padding: 15px 20px; border-bottom: 1px solid transparent; border-top-right-radius: 1px; border-top-left-radius: 1px; }
 .panel-heading > .dropdown .dropdown-toggle { color: inherit; }
 .panel-title { margin-top: 0; margin-bottom: 0; font-size: 14px; color: inherit; }
 .panel-title > a, .panel-title > small, .panel-title > .small, .panel-title > small > a, .panel-title > .small > a { color: inherit; }
